--- a/configuration.properties
+++ b/configuration.properties
@@ -12,3 +12,6 @@ HMCValidUsername=manager
 HMCValidPassword=Manager1!
 HMCWrongUsername=manager2
 HMCWrongPassword=manager1/telmycamp.com
+
+HerokuappAddElementUrl=https://the-internet.herokuapp.com/add_remove_elements/
+WebUniversityUrl=http://webdriveruniversity.com/
