--- a/configuration.properties
+++ b/configuration.properties
@@ -11,7 +11,7 @@ HMCUrl=https://www.hotelmycamp.com
 HMCValidUsername=manager
 HMCValidPassword=Manager1!
 HMCWrongUsername=manager2
-HMCWrongPassword=manager1/telmycamp.com
+HMCWrongPassword=manager1/
 
 HerokuappAddElementUrl=https://the-internet.herokuapp.com/add_remove_elements/
 WebUniversityUrl=http://webdriveruniversity.com/
